[WK2] Invalidate FontCache before purging MemoryCache upon WebProcess termination/closure https://bugs.webkit.org/show_bug.cgi?id=118280

Reviewed by Darin Adler.

Invalidate the FontCache before disabling and purging the MemoryCache in WebProcess::didClose
and WebProcess::terminate. This frees up additional references to objects that were held
by the FontCache, reducing the amount of 'LEAK: *' output when exiting MiniBrowser or
WebKitTestRunner in debug builds.

* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::terminate):
(WebKit::WebProcess::didClose):


Canonical link: https://commits.webkit.org/136348@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152340 268f45cc-cd09-0410-ab3c-d52691b4dbfc